--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@headlessui/react": "^2.2.3",
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.6.7",
     "clsx": "^2.1.1",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
